--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cheerio": "^1.0.0-rc.12",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "find-remove": "^4.0.4",
     "pdfkit": "^0.13.0",
     "pretty": "^2.0.0"
   }
